# FrankfurterDesktop

./: .travis.yml  CMakeLists.txt  CurrencyExchangeData.jucer  NewProject.jucer  README.md  app.jucer  appveyor.yml  build.bat  build.pl  clean.bat  juce_lgpl.ptch  setenv.bat
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2017/: CurrencyExchanger.sln  CurrencyExchanger_App.vcxproj  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Currency.cpp  Currency.h  FlagIcons.cpp  FlagIcons.h  HistoricalRateComponent.cpp  HistoricalRateComponent.h  HistoricalRateModel.cpp  HistoricalRateModel.h  HistoricalRatePlotComponent.cpp  HistoricalRatePlotComponent.h  JsonRequest.cpp  JsonRequest.h  LatestRateComponent.cpp  LatestRateComponent.h  LatestRateModel.cpp  LatestRateModel.h  Main.cpp  MainComponent.cpp  MainComponent.h  Rate.cpp  Rate.h  Utility.cpp  Utility.h
Source/component/: HistoricalRateComponent.cpp  HistoricalRateComponent.h  HistoricalRatePlotComponent.cpp  HistoricalRatePlotComponent.h  LatestRateComponent.cpp  LatestRateComponent.h
Source/model/: HistoricalRateModel.cpp  HistoricalRateModel.h  LatestRateModel.cpp  LatestRateModel.h
app/: Main.cpp  MainComponent.cpp  MainComponent.h
app/component/: DatePickerWindow.cpp  DatePickerWindow.h  HistoricalRateComponent.cpp  HistoricalRateComponent.h  HistoricalRatePlotComponent.cpp  HistoricalRatePlotComponent.h  LatestRateComponent.cpp  LatestRateComponent.h  UserInputComponent.cpp  UserInputComponent.h
app/helper/: Currency.cpp  Currency.h  FlagIcons.cpp  JsonRequest.cpp  JsonRequest.h  (+1 more)
(+4 files in other folders)
